[Glitch] Fix unnecessary gap under of video modal
Port cb3c6d17804da67d3c0ff233a9ca1c1902f6926f to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components/media.scss
+++ b/app/javascript/flavours/glitch/styles/components/media.scss
@@ -404,6 +404,7 @@
   @include fullwidth-gallery;
 
   video {
+    display: block;
     max-width: 100vw;
     max-height: 80vh;
     z-index: 1;
